Wireframe input node not working in Eevee anymore #62930

Closed
opened 2019-03-25 18:15:01 +01:00 by Juan Pablo Bouza · 5 comments

I'm attaching a Blend file. So I just compiled Blender, March 25th and if you connect a wireframe node in Eevee, the result of the shader is pink. So in the attached example, instead of looking like this:

wire_bug.jpg

it's looks totally pink

wireframe_eevee_bug.blend

I'm attaching a Blend file. So I just compiled Blender, March 25th and if you connect a wireframe node in Eevee, the result of the shader is pink. So in the attached example, instead of looking like this: ![wire_bug.jpg](https://archive.blender.org/developer/F6881829/wire_bug.jpg) it's looks totally pink [wireframe_eevee_bug.blend](https://archive.blender.org/developer/F6881818/wireframe_eevee_bug.blend)
Author
Member

Added subscriber: @jpbouza-4

Added subscriber: @jpbouza-4
Clément Foucault was assigned by Juan Pablo Bouza 2019-03-25 18:16:16 +01:00

It works here (Linux + AMD Vega). What is your system spec? Also give us the output of blender running in a terminal with the options --debug.

It works here (Linux + AMD Vega). What is your system spec? Also give us the output of blender running in a terminal with the options `--debug`.
Author
Member

Hi Clément!

I'm attaching the console output. System is Kubuntu 18.04, geforce 1080, driver 415.27

I have a another build compiled a couple of days ago and it works perfectly well there.

wireframe_eevee_bug.txt

Hi Clément! I'm attaching the console output. System is Kubuntu 18.04, geforce 1080, driver 415.27 I have a another build compiled a couple of days ago and it works perfectly well there. [wireframe_eevee_bug.txt](https://archive.blender.org/developer/F6882011/wireframe_eevee_bug.txt)

This issue was referenced by 420f30efe7

This issue was referenced by 420f30efe7ef047ea39f94033bc0182063a5adcb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62930
No description provided.