Fix T62930 Eevee: Wireframe input node not working with certain compiler